@@ -146,8 +146,9 @@ PORTING
 
   remctl should port reasonably well.  It has been tested on:
 
-      Solaris 8, 9
-      Linux (glibc 2.2, 2.3, 2.5)
+      Solaris 8, 9, 10
+      Linux (glibc 2.2, 2.3, 2.5, 2.6, 2.6.1)
+      Mac OS X 10.4
       NetBSD
 
   but should work on any Unix varient.
